--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,10 +8,11 @@
     "build": "vite build",
     "preview": "vite preview"
   },
-  "dependencies": {
+ "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "axios": "^1.6.8"
+    "axios": "^1.6.8",
+    "react-icons": "^5.2.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
