--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
   "react-dom": "^18.2.0",
   "react-icons": "^5.2.1",
   "react-barcode": "^1.5.1"
+  "react-input-mask": "^2.0.4",
 },
   "devDependencies": {
     "@types/react": "^18.2.66",
