--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,8 @@
     "react-icons": "^5.2.1",
     "react-barcode": "^1.5.1",
     "react-input-mask": "^2.0.4"
+    "chart.js": "^4.4.2",
+    "react-chartjs-2": "^5.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
