--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,16 +8,18 @@
     "build": "vite build",
     "preview": "vite preview"
   },
+
   "dependencies": {
     "axios": "^1.6.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
     "react-barcode": "^1.5.1",
-    "react-input-mask": "^2.0.4"
+    "react-input-mask": "^2.0.4",
     "chart.js": "^4.4.2",
     "react-chartjs-2": "^5.2.0"
   },
+  
   "devDependencies": {
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
