--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,8 @@
     "react-barcode": "^1.5.1",
     "react-input-mask": "^2.0.4",
     "chart.js": "^4.4.2",
-    "react-chartjs-2": "^5.2.0"
+    "react-chartjs-2": "^5.2.0",
+    "react-datepicker": "^6.9.0"
   },
   
   "devDependencies": {
