--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react-input-mask": "^2.0.4",
     "chart.js": "^4.4.2",
     "react-chartjs-2": "^5.2.0",
+    "react-lottie-player": "^2.0.0",
     "react-datepicker": "^6.9.0"
   },
   
